# research-agent

./: .gitignore  CONTEXT.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: config.py  db.py  graph.py  main.py  models.py  schemas.py  state.py
backend/app/nodes/: extract.py  plan.py  search.py  synthesize.py  verify.py
backend/research_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/adr/: 0001-use-langgraph-for-orchestration.md  0002-use-nvidia-nim-tiered-models.md  0003-postgres-for-full-session-persistence.md
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css
frontend/src/api/: sse.ts
frontend/src/components/: AppLayout.tsx  ConfirmDialog.tsx  HistorySidebar.tsx  ProgressStepper.tsx  SearchForm.tsx
frontend/src/context/: ResearchContext.tsx
frontend/src/pages/: HomePage.tsx  ReportPage.tsx
